--- a/asyncflow-momo/flowsvr/src/main/resources/application.yml
+++ b/asyncflow-momo/flowsvr/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/asyncflow?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
     username: root
-    password: root@2023
+    password: password
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
         min-idle: 1                                          # 最小连接数
